<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">App4Chat</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="noAccount">Don\'t have an account? Register here!</string>
    <string name="register">Register now</string>
    <string name="hasAccount">Already have an account? Login Here!</string>
    <string name="username">Username:</string>
    <string name="NewMessage">New Message</string>
    <string name="CheckNewMessage">Check New Messages</string>
    <string name="Logout">Logout</string>
    <string name="To">To:</string>
    <string name="Message">Message:</string>
    <string name="send">Send</string>
</resources>
