<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff90ddff"
    android:orientation="vertical"
    android:padding="10dp">

        <!--  View Title Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/register"
            android:textSize="25sp"
            android:textStyle="bold" />
        <!--  Name Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/username" />
        <!--  Name TextField -->
        <EditText
            android:inputType="text"
            android:id="@+id/registerUserName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <!--  Email Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/email" />
        <!--  Email TextField -->
        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/registerEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <!--  Password Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/password" />
        <!--  Password TextField -->
        <EditText
            android:inputType="textPassword"
            android:id="@+id/registerPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <!--  Error message -->
        <TextView android:id="@+id/status"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#e30000"
            android:padding="10dip"
            android:textStyle="bold"/>

        <!--  Register Button -->
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/register" />

        <!--  Link to Login Screen -->
        <Button
            android:id="@+id/btnLinkToLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/hasAccount" />

 </LinearLayout>
