<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff90ddff"
    android:orientation="vertical"
    android:padding="10dp">

        <!--  View Title Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/login"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!--  Username Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <!-- UsernameTextField -->
        <EditText
            android:inputType="textAutoComplete"
            android:id="@+id/loginUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <!--  Password Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/password" />
        <!--  Password TextField -->
        <EditText
            android:inputType="textPassword"
            android:id="@+id/loginPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <!--  Error message -->
        <TextView android:id="@+id/status"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#e30000"
            android:padding="10dip"
            android:textStyle="bold"/>

        <!--  Login Button -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/login" />

        <!--  Link to Registration Screen -->
        <Button
            android:id="@+id/btnLinkToRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/noAccount"/>

</LinearLayout>

